Fixed bugs from crash logs

--- a/app/src/main/res/layout/activity_sheets_list.xml
+++ b/app/src/main/res/layout/activity_sheets_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,21 +7,32 @@
     tools:context=".activities.SheetsList">
 
     <TextView
+        android:id="@+id/linkSheetText"
         android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/open_sans_bold"
         android:text="Link your Aspire sheet"
-        android:textColor="#000"
-        android:id="@+id/linkSheetText"
         android:textAlignment="center"
-        android:textSize="30sp"/>
+        android:textColor="#000"
+        android:textSize="30sp" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/sheetsListRecyclerView_LinkSheets"
         android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/linkSheetText"
-        android:id="@+id/sheetsListRecyclerView_LinkSheets"/>
+        android:layout_marginTop="10dp" />
+
+    <TextView
+        android:id="@+id/noSheetsText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:text="No Sheets available or permission not granted, please logout and try again"
+        android:textAlignment="center"
+        android:textColor="@color/aspireDarkPrimaryColor"
+        android:textSize="16sp" />
 
 </RelativeLayout>
