--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -26,16 +26,19 @@
                 android:layout_centerInParent="true"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <ProgressBar
+                    android:id="@+id/loadingProgress"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:indeterminateTint="#fff" />
 
                 <TextView
+                    android:id="@+id/loadingText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textAlignment="center"
                     android:layout_marginStart="10dp"
                     android:text="Loading, please wait..."
                     android:textColor="#fff"
