--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -65,7 +65,7 @@
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Transaction" />
+                android:text="Account Balance" />
         </com.google.android.material.tabs.TabLayout>
 
         <androidx.viewpager.widget.ViewPager
@@ -76,6 +76,19 @@
 
         </androidx.viewpager.widget.ViewPager>
 
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/addTransactionsFAB_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="25dp"
+            android:layout_marginEnd="15dp"
+            app:backgroundTint="@color/aspire_blue"
+            android:text="Add Transactions"
+            app:icon="@drawable/plus_icon_white"
+            android:textColor="#fff"
+            app:iconTint="#fff"/>
     </RelativeLayout>
     <include
         layout="@layout/settings_bottom_sheet"
