--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -1,7 +1,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/widget_margin">
+    android:layout_margin="@dimen/widget_margin"
+    android:id="@+id/widget_layout"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,6 +24,7 @@
             android:textColor="#ffffff"
             android:textStyle="bold"
             android:text="No categories selected!"
+            android:fontFamily="@font/open_sans_bold"
             android:textSize="20sp" />
 
     </LinearLayout>
